<resources>
    <string name="app_name">EverGram</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="logo">Logo App</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="contrase_a">Contraseña</string>
    <string name="tienes_una_cuenta">¿Tienes una cuenta?,</string>
    <string name="crea_una_aqu">Crea una aquí</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="repetir_contrase_a">Repetir contraseña</string>
    <string name="Rpass">Repertir Contraseña</string>
    <string name="listo">Listo</string>
    <string name="registrate">Registrate</string>
    <string name="testcardview">testCardView</string>
    <string name="ever_cuevas">Ever Cuevas</string>
    <string name="hace_4_dias">Hace 4 dias</string>
    <string name="_10_me_gusta">10 Me gusta</string>
    <string name="title_activity_test_bar">TestBarActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_content">ContentActivity</string>
    <string name="search">Search</string>
    <string name="perfil">Perfil</string>
    <string name="tab_home">Home</string>

    <string name="lorem">
        Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.
    </string>
</resources>
