<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ecrGeneralCard"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginBottom="@dimen/fab_margin"
    app:cardCornerRadius="4dp">

    <FrameLayout
        android:id="@+id/ecrCardFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/ecrImageCard"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/testcardview"
            app:srcCompat="@drawable/banner_img1"
            android:scaleType="centerCrop" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/ecrCardConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/cardBackgroud"
            android:paddingBottom="5dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/ecrTitleCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ever_cuevas"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ecrCardFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hace_4_dias"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ecrTitleCard" />

            <LinearLayout
                android:id="@+id/ecrCardLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ecrCardFecha">

                <CheckBox
                    android:id="@+id/ecrCardCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/cardcheck"
                    tools:layout_editor_absoluteX="25dp"
                    tools:layout_editor_absoluteY="25dp" />

                <TextView
                    android:id="@+id/ecrCardLike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/_10_me_gusta"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    tools:layout_editor_absoluteX="59dp"
                    tools:layout_editor_absoluteY="58dp" />
            </LinearLayout>

        </android.support.constraint.ConstraintLayout>
    </FrameLayout>

</android.support.v7.widget.CardView>