<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="evercuevas.com.evergram.LoginActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.7"
                android:gravity="center">


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/logo"
                    app:srcCompat="@drawable/logo" />

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/textInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="32dp"
                            android:layout_marginStart="32dp"
                            android:layout_marginTop="16dp"
                            android:theme="@style/EcrInputBlack"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <EditText
                                android:id="@+id/editText4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/nombre_de_usuario"
                                android:inputType="textPersonName" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/textInputLayout2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="32dp"
                            android:layout_marginStart="32dp"
                            android:layout_marginTop="16dp"
                            android:theme="@style/EcrInputBlack"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                            <EditText
                                android:id="@+id/editText3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:hint="@string/contrase_a"
                                android:inputType="textPassword" />
                        </android.support.design.widget.TextInputLayout>

                        <Button
                            android:id="@+id/button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="32dp"
                            android:layout_marginStart="32dp"
                            android:layout_marginTop="16dp"
                            android:text="@string/login"
                            android:theme="@style/EcrBtnAzul"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="32dp"
                            android:text="@string/tienes_una_cuenta"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toStartOf="@+id/textView2"
                            app:layout_constraintHorizontal_chainStyle="packed"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/button" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="32dp"
                            android:text="@string/crea_una_aqu"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="16sp"
                            android:onClick="createAccount"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/textView"
                            app:layout_constraintTop_toBottomOf="@+id/button" />


                    </android.support.constraint.ConstraintLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>
